syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.rpc.core.device";
option java_outer_classname = "CommonProto";
option objc_class_prefix = "Common";

package device;

message CommonReply {
	uint32 code = 1;
	string message = 2;
	string data = 3;
}